--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
+amqp==2.1.4
+beautifulsoup4==4.5.3
+billiard==3.5.0.2
+bs4==0.0.1
+celery==4.0.2
 Django==1.9
-django-material==0.8.0
-djangorestframework==3.4.1
-Markdown==2.6.6
-Pillow==3.1.0
-PyMySQL==0.6.6
-requests==2.10.0
-six==1.10.0
-celery==3.1.18
+django-material==0.11.0
+et-xmlfile==1.0.1
+gunicorn==19.6.0
+hashids==1.1.0
+jdcal==1.3
+kombu==4.0.2
+olefile==0.43
+openpyxl==2.4.1
+Pillow==4.0.0
+PyMySQL==0.7.9
+PyPDF2==1.26.0
+pytz==2016.10
 redis==2.10.5
+requests==2.12.4
+vine==1.1.3
